compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_actors_actor_local_annotation_unsupported.snap
---
source: tests/fixtures.rs
assertion_line: 4782
expression: transcript
---
fixture: tests/fixtures/diagnostics/actors/actor_local_annotation_unsupported.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × unsupported actor local annotation
   ╭─[tests/fixtures/diagnostics/actors/actor_local_annotation_unsupported.ml:3:16]
 2 │   let worker = spawn {
 3 │     let count: i64 = 1;
   ·                ─┬─
   ·                 ╰── stage0 actor locals do not support type annotations yet
 4 │     receive {
   ╰────
  help: omit the annotation
