compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_actors_link_non_actor.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/actors/link_non_actor.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × link target is not an actor
   ╭─[tests/fixtures/diagnostics/actors/link_non_actor.ml:3:3]
 2 │   let not_actor_id = "not an actor";
 3 │   link(not_actor_id);
   ·   ─────────┬────────
   ·            ╰── `not_actor_id` is a value, not an actor id
 4 │   dbg("done")
   ╰────
  help: send to the result of `spawn { ... }`
