compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_actors_receive_outside_spawn.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/actors/receive_outside_spawn.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × receive outside spawn
   ╭─[tests/fixtures/diagnostics/actors/receive_outside_spawn.ml:2:3]
 1 │ fn main() {
 2 │   receive { msg -> dbg(msg) }
   ·   ─────────────┬─────────────
   ·                ╰── `receive` is only valid inside an actor body
 3 │ }
   ╰────
  help: wrap the receive in `spawn { ... }`
