compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_actors_send_actor_id_unknown_param_message_conflict.snap
---
source: tests/fixtures.rs
assertion_line: 2971
expression: transcript
---
fixture: tests/fixtures/diagnostics/actors/send_actor_id_unknown_param_message_conflict.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × function argument type does not match
   ╭─[tests/fixtures/diagnostics/actors/send_actor_id_unknown_param_message_conflict.ml:3:3]
 2 │   send(worker, "go");
 3 │   send(worker, 1);
   ·   ───────┬───────
   ·          ╰── this call requires `String`, but the argument provides `i64`
 4 │   ()
   ╰────
  help: pass an argument with the parameter type expected by the function
