compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_actors_send_generic_record_message_mismatch.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/actors/send_generic_record_message_mismatch.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × function argument type does not match
   ╭─[tests/fixtures/diagnostics/actors/send_generic_record_message_mismatch.ml:5:3]
 4 │   let worker = spawn { receive { box { value } -> value + 1 } };
 5 │   send(worker, box { value: "oops" })
   ·   ─────────────────┬─────────────────
   ·                    ╰── this call requires `i64`, but the argument provides `String`
 6 │ }
   ╰────
  help: pass an argument with the parameter type expected by the function
